# GeniusAI

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
argus/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
argus/backend/app/: main.py  scheduler.py
argus/backend/app/alerts/: engine.py
argus/backend/app/analysis/: rag.py
argus/backend/app/collectors/: adsb_collector.py  ais_collector.py  base.py  gdelt_collector.py  hazards_collector.py  mastodon_collector.py  rss_collector.py  ucdp_collector.py
argus/backend/app/core/: config.py
argus/backend/app/db/: models.py  session.py
argus/config/: models.yaml  sources.yaml
argus/data/gazetteer/: seed.tsv
argus/docker/backend/: Dockerfile
argus/docker/postgres/: Dockerfile
argus/frontend/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
argus/keywords/: en.txt  pt.txt
argus/scripts/: build_gazetteer.py
argus/tests/: conftest.py  test_collectors_and_ws.py  test_events_repo_pg.py  test_health_and_config.py  test_llm_router.py  test_rag_and_briefing.py  test_severity_and_alerts.py  test_stage1_filter.py  test_stage2_geo.py  test_stage3_enrich.py
geniusai-foresight/: .gitignore  AUTHORS.md  CITATION.cff  NOTICE.md  PRD.md  README.md  SECURITY.md  pyproject.toml  squad.yaml
geniusai-foresight/agents/: causal-forecaster.yaml  country-profiler.yaml  evidence-auditor.yaml  game-theory-modeler.yaml  intake-orchestrator.yaml  red-team-calibrator.yaml  report-narrator.yaml  simulation-engineer.yaml
geniusai-foresight/docs/: METODOLOGIA-CIENTIFICA.md  METODOLOGIA-TEORIA-DOS-JOGOS.md
geniusai-foresight/examples/: soy-trade-shock.json
geniusai-foresight/foresight/: __init__.py  actors.py  calibration.py  cli.py  evidence.py  game_theory.py  models.py  orchestration.py  reporting.py  safety.py  simulation.py
geniusai-foresight/scripts/: run_demo.py  scan_secrets.py  validate_squad.py
geniusai-foresight/tasks/: build-causal-model.yaml  build-evidence-snapshot.yaml  calibrate-and-red-team.yaml  frame-study.yaml  profile-actors.yaml  publish-brief.yaml  run-scenarios.yaml  select-game-form.yaml
geniusai-foresight/tests/: test_calibration.py  test_evidence_actors.py  test_game_theory.py  test_manifest.py  test_security_validation.py  test_simulation_cli.py
geniusai-foresight/workflows/: foresight-cycle.yaml
packs/: README.md
(+293 files in other folders)
