[project]
name = "argus"
version = "0.1.0"
description = "ARGUS — Sistema de Monitoramento Geopolitico Global (GEOINT/OSINT local-first)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "geoalchemy2>=0.15",
    "pgvector>=0.2.5",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "spacy>=3.7",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "geojson>=3.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
cloud = ["anthropic>=0.30", "openai>=1.30"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
